feat : 컬럼 변환 type 구현 WIP